compleats all tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,37 +8,23 @@ project(MinaMangaProgram)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # 3. Hitta alla .cpp-filer i projektet (och i undermappar)
-file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "*.cpp")
+file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/*.cpp" "tester/*.cpp")
 
-# för att länga in catch
-find_package(Catch2 3 REQUIRED)
-target_link_libraries(test_time_main PRIVATE Catch2::Catch2WithMain) # Antar att filen heter test_time.cpp
 
-# 4. Loopa igenom listan av filer vi hittade
-foreach(CPP_FILE IN LISTS SOURCES)
-    
-    # Plocka ut filnamnet utan ändelsen (.cpp)
-    # Exempel: Har vi filen "src/dag_01.cpp" blir TARGET_NAME "dag_01"
-    #get_filename_component(TARGET_NAME "${CPP_FILE}" NAME_WE)
-    
-    # Skapa en körbar fil (.exe) för just denna specifika cpp-fil
-    #add_executable(${TARGET_NAME} "${CPP_FILE}")
-    # Hämta filnamnet utan ändelse (t.ex. "main")
-    get_filename_component(FILE_NAME "${CPP_FILE}" NAME_WE)
-    
-    # Hämta sökvägen till mappen där filen ligger
-    get_filename_component(DIR_PATH "${CPP_FILE}" DIRECTORY)
-    
-    # Plocka ut sista namnet i sökvägen (mappnamnet, t.ex. "labb2")
-    get_filename_component(DIR_NAME "${DIR_PATH}" NAME)
-    
-    # Skapa det nya namnet: labb2_main
-    set(TARGET_NAME "${DIR_NAME}_${FILE_NAME}")
-    
-    # Skapa en körbar fil
-    add_executable(${TARGET_NAME} "${CPP_FILE}")
-    
-    # Bonus: Skriv ut i terminalen så du ser vad som händer när du kör cmake
-    message(STATUS "Skapar target: ${TARGET_NAME}")
-    
-endforeach()
+# Aktivera FetchContent
+include(FetchContent)
+
+# Definiera var Catch2 ska laddas ner ifrån
+FetchContent_Declare(
+  Catch2
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG        v3.5.2 # Du kan byta detta till senaste versionen om du vill
+)
+
+# Gör Catch2 tillgängligt i ditt projekt
+FetchContent_MakeAvailable(Catch2)
+# Skapa BARA en körbar fil för ditt testprogram
+add_executable(test_labb2 "tester/test_tdde18_lab2.cpp")
+
+# Länka in Catch2
+target_link_libraries(test_labb2 PRIVATE Catch2::Catch2WithMain)
