some cmake problem but makes progress on labb3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ cmake_minimum_required(VERSION 3.12)
 # 2. Namnge ditt projekt
 project(MinaMangaProgram)
 
+# så vi får c++ 20:)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # ger intellisence hihihi
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -24,7 +28,8 @@ FetchContent_Declare(
 # Gör Catch2 tillgängligt i ditt projekt
 FetchContent_MakeAvailable(Catch2)
 # Skapa BARA en körbar fil för ditt testprogram
-add_executable(test_labb2 "tester/test_tdde18_lab2.cpp")
+add_executable(test_labb2 "tester/test_tdde18_labb2.cpp")
+add_executable(test_labb3 "tester/test_tdde18_labb3.cpp")
 
 # Länka in Catch2
 target_link_libraries(test_labb2 PRIVATE Catch2::Catch2WithMain)
